--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -16,10 +16,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
